# autonomy_engine

./: .dockerignore  .env.example  .gitignore  .zipignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.yml  docker-compose.yml  fix_deps.py  fly.toml  models.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  fly-deploy.yml
bench/: README.md  benchmark_runs.py  compare_results.py
dashboard/: app.py  data_loader.py  pipeline_runner.py  rate_limiter.py  run_export.py  secrets_bridge.py  subprocess_env.py  theme.py
dashboard/components/: chunk_recovery.py  evidence_card.py  page_header.py  pipeline_visual.py  trace_timeline.py
dashboard/pages/: audit_trail.py  benchmarks.py  config_editor.py  create_project.py  home.py  pipeline_explorer.py  run_inspector.py  run_outputs.py  run_pipeline.py
docs/: architecture.md  audit-trail.md  configuration.md  contributing.md  demo-script.md  deployment.md  migration-langgraph.md  prefect-sunset-audit.md  sandbox.md  threat-model.md  usage.md
engine/: cache.py  compat.py  context.py  contract_checker.py  cost_estimator.py  decision_gates.py  design_contract.py  evidence.py  extraction.py  llm_provider.py  log_config.py  model_registry.py  notifier.py  prompt_guard.py  report.py  sandbox.py  sandbox_docker.py  spec_normalizer.py  state_loader.py  tier_context.py  tracer.py  usage_tracker.py  verify_trace.py
flows/: autonomous_flow.py
graph/: __init__.py  nodes.py  pipeline.py  state.py
intake/: intake.py  renderer.py  schema.py
specs/: testD_NOTES.md  testD_keyvault.yml
tasks/: bootstrap.py  design.py  extract.py  implement.py  manifest_schema.py  test.py  verify.py
templates/: DECISION_GATES.yml
templates/prompts/: design.txt  implement.txt  implement_chunk.txt  implement_plan.txt  intake_suggest.txt  verify.txt
tests/: conftest.py  test_adversarial_inputs.py  test_auto_detect_checks.py  test_bootstrap.py  test_cache.py  test_cache_eviction.py  test_canonical_schema.py  test_circuit_breaker.py  test_contract_checker.py  test_dashboard_data_loader.py  test_decision_gates.py  test_design_contract.py  test_docker_sandbox.py  test_evidence.py  test_extract.py  test_extraction.py  test_graph_pipeline.py  test_implement_gate.py  test_intake.py  test_integration.py  test_llm_provider.py  test_manifest_merge.py  test_model_registry.py  test_production_readiness.py  test_project_dir.py  test_prompt_guard.py  test_report.py  test_retry.py  test_run_export.py  test_sandbox.py  test_sandbox_cache.py  test_sandbox_node.py  test_selective_verify.py  test_share_zip.py  test_spec_normalizer.py  test_subprocess_env.py  test_task_gates.py  test_thread_safety.py  test_tier_context.py  test_trace_tampering_integration.py  (+3 more)
