[build-system]
requires = ["setuptools>=68.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomy-engine"
version = "2.0.0"
description = "LangGraph-orchestrated autonomous build engine with human-in-the-loop decision gates"
requires-python = ">=3.10"
dependencies = [
    # ── Orchestration (LangGraph replaces Prefect as primary orchestrator) ──
    "langgraph>=1.0,<2",
    # ── LLM providers ──
    "anthropic>=0.87,<2",
    "openai>=1.0,<3",
    # ── Core utilities ──
    "pydantic>=2.11,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "ruff>=0.4,<1",
    "pip-tools>=7.0",
]
dashboard = [
    "streamlit>=1.30,<2",
    "plotly>=5.0,<6",
]
# SQLite checkpointer for persistent pipeline state across restarts.
# Not required for testing (MemorySaver is the default).
checkpoint-sqlite = [
    "langgraph-checkpoint-sqlite>=3.0.1,<4",
]

[tool.setuptools.packages.find]
include = ["engine*", "graph*", "intake*", "tasks*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before other imports
"intake/intake.py" = ["E402"]
"bench/benchmark_runs.py" = ["E402"]
"engine/llm_provider.py" = ["E402"]
# Prefect log-level suppression must run before engine.* imports
"graph/nodes.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that create real virtualenvs (~30s each)",
    "docker: tests that require a working Docker CLI + daemon",
]
